--- a/server-blockshared/views/partials/sidebar.ejs
+++ b/server-blockshared/views/partials/sidebar.ejs
@@ -53,6 +53,21 @@
   <!-- Divider -->
   <hr class="sidebar-divider d-none d-md-block" />
 
+  <!-- Heading -->
+  <div class="sidebar-heading">
+    Blockchain
+  </div>
+
+  <!-- Nav Item - Pembayaran -->
+  <li class="nav-item">
+    <a class="nav-link" href="/admin/blocklist">
+      <i class="fas fa-fw fa-square"></i>
+      <span>Block List</span></a>
+  </li>
+
+  <!-- Divider -->
+  <hr class="sidebar-divider d-none d-md-block" />
+
   <!-- Sidebar Toggler (Sidebar) -->
   <div class="text-center d-none d-md-inline">
     <button class="rounded-circle border-0" id="sidebarToggle"></button>
